k8s/web-service/003-Service-sapoon-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: sapoon-web
  labels:
    app: sapoon-web
    service: sapoon-web
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: sapoon-web
