k8s/web-service/004-Gateway-sapoon-web.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sapoon-web-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
