k8s/web-service/005-Virtualservice-sapoon-web.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sapoon-web
spec:
  hosts:
  - "*"
  gateways:
  - sapoon-web-gateway
  http:
  - match:
    - uri:
        prefix: /sapoon/web
    route:
    - destination:
        host: sapoon-web
        port:
          number: 80
